  * jasypt-spring3
  * jasypt-acegisecurity
  * jasypt-springsecurity2
  * jasypt-springsecurity3
  * jasypt-wicket13
  * jasypt-wicket15
- Fixed error in CLI .bat files resulting in bad processing of CLI commands
  which involved passwords containing exclamation mark symbols.
- Fixed bug in PooledPBEStringEncryptor which caused first encryptor in pool not
  use hexadecimal output type.
  

1.8
===
- Small bugfixing for large BigInteger number decryption.
- Modified in-memory storage of PBE passwords to avoid having Strings in memory that contain
  the password being used. Now PBE passwords are stored as char[] objects that are zeroed as
  soon as they are used. New "setPasswordCharArray(char[] password)" methods allow users to
  specify passwords as char[] also, so that there is no need to create String passwords.
- Modified the order in which Normalizer implementations are used: now icu4j is used if it is
  in the classpath (even if Java >= 6 is being used). If icu4j is not present, java.text.Normalizer
  is used (if Java >= 6).
- Fixed CLI scripts: *.jar in "find" command was matching jar files in the current folder 
  instead of those in the lib folder. Fixed by surrounding "*.jar" by simple inverted commas.
- Added to EncryptablePropertyPlaceholderConfigurer the ability to decrypt system properties.


1.7.1
=====
- Fixed EncryptableServletContextPropertyPlaceholderConfigurer 


1.7
===
- Fixed Hibernate 3.6 compatibility.
- Removed dependencies on commons-lang and commons-codec. Jasypt can now operate
  without depedencies on JDK version >= 6.
- Added pool-based implementations of Standard digesters and PBE encryptors to improve
  performance in multiprocessor systems.  
- Created "lite" .jar package including only standard String and Byte digest and 
  encryption: no BigDecimal or BigInteger encryption, no "util" package, 
  no Spring/Hibernate/Wicket integrations, no Web PBE configuration, no CLI utils, 
  no properties encryption, no Zero salt generator.